Closed Bug 704451 Opened 14 years ago Closed 14 years ago

Switching to unread filter hides all my email

Categories

(Thunderbird :: Folder and Message Lists, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 11.0

People

(Reporter: Usul, Assigned: Bienvenu)

References

Details

(Keywords: regression)

Attachments

(1 file)

STR : 1) Open your bugmail folder ( View Threads with unread is my choice) 2) Select the unread button on the QFB All unread messages that were visible are no more visible. I see Error: uncaught exception: [Exception... "Component returned failure code: 0x80004001 (NS_ERROR_NOT_IMPLEMENTED) [nsIMsgDBView.numMsgsInView]" nsresult: "0x80004001 (NS_ERROR_NOT_IMPLEMENTED)" location: "JS frame :: resource:///modules/dbViewWrapper.js :: DBViewWrapper__applyViewChanges :: line 1388" data: no] in the error console.
Seems to be related to the fact that I don't have any active filter , I just click on the unread button.
Trying STRs proper for bienvenu : View -> Sort by -> Threaded, date, ascending View -> Messages -> All View Threads -> Unread go to QFB , click the unread button -> empty view
Any extensions (e.g., Conversations) installed?
I'm not convinced this exception is why the view is empty for you, because I see the exception but the message list is still displayed. But I can generate a try server build for you to try.
Assignee: nobody → dbienvenu
Status: NEW → ASSIGNED
(In reply to David :Bienvenu from comment #5) > try builds will show up here, if they succeed - > http://ftp.mozilla.org/pub/mozilla.org/thunderbird/try-builds/ > bienvenu@nventure.com-ed7af9cec215 Spot on. The view is still empty when I use the try build - but I'm not seeing the exception.
Comment on attachment 576220 [details] [diff] [review] this implements the method well, it wouldn't hurt to implement this, if only for consistency's sake, and to get rid of the exception.
Attachment #576220 - Flags: review?(neil)
Comment on attachment 576220 [details] [diff] [review] this implements the method Looks reasonable although we don't seem to use numMsgsInView in SeaMonkey.
Attachment #576220 - Flags: review?(neil) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 11.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: