implement numMsgsInView for special views to quiet error console exception, r=neil, bug 704451